--- a/.prettierignore
+++ b/.prettierignore
@@ -1,8 +1,20 @@
-.DS_Store
-node_modules
-.docusaurus
+# Dependencies
+/node_modules
 
-# Ignore files for PNPM, NPM and YARN
-pnpm-lock.yaml
-package-lock.json
-yarn.lock
+# Production
+/build
+
+# Generated files
+.docusaurus
+.cache-loader
+
+# Misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
